--- a/Part A/index.html
+++ b/Part A/index.html
@@ -31,7 +31,7 @@
               <p class="card-text">
                 Query application to search products from XML.
               </p>
-              <a href="section1.html" class="btn btn-primary mt-auto index_btn"
+              <a href="section1.html" class="btn btn-primary mt-auto"
                 >Section 1 - XML</a
               >
             </div>
@@ -42,7 +42,7 @@
               <p class="card-text">
                 Weather application to fetch city weather from JSON.
               </p>
-              <a href="section2.html" class="btn btn-primary mt-auto index_btn"
+              <a href="section2.html" class="btn btn-primary mt-auto"
                 >Section 2 - JSON</a
               >
             </div>
