--- a/Part A/section1.html
+++ b/Part A/section1.html
@@ -18,7 +18,35 @@
   <body>
     <div class="container">
       <div class="row">
-        <div id="output"></div>
+        <div class="col-12 text-center index_body">
+          <h1>Section 1 - XML</h1>
+          <h2>Lorenzo Moares Nunez - 23378441</h2>
+        </div>
+      <div class="row pt-5">
+        <div class="col-5 products_col align-self-start">
+          <h2 class="py-5 text-center">All Product Information</h2>
+          <div id="output"></div>
+        </div>
+        <div class="col-2"></div>
+        <div
+          id="search"
+          class="col-5 align-self-start pb-5 text-center products_search"
+        >
+          <form>
+            <label for="searchInput" class="form-label"
+              ><h2 class="py-5">Search by Code</h2></label
+            >
+            <input type="text" id="searchInput" class="form-control" />
+            <button type="button" onclick="searchProduct()" id="searchBtn" class="btn btn-primary mt-3">
+              Search
+            </button>
+            <button type="button" onclick="resetProducts()" id="resetBtn" class="btn btn-primary mt-3">
+              Reset
+            </button>
+          </form>
+          <h6 class="mt-3">Code: ###-## (eg: 011-01)</h6>
+          <div id="searchOutput" class="mt-4"></div>
+        </div>
       </div>
     </div>
     <link
