--- a/Part A/section1.html
+++ b/Part A/section1.html
@@ -8,6 +8,7 @@
     <script src="js/scriptxml.js" defer></script>
     <meta name="author" content="Lorenzo Moares Nunez" />
     <meta name="description" content="Web Application Development CA 1" />
+    <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,12 +22,15 @@
         <div class="col-12 text-center index_body">
           <h1>Section 1 - XML</h1>
           <h2>Lorenzo Moares Nunez - 23378441</h2>
+          <a href="index.html" class="btn btn-primary mt-auto"
+            >Return to HomePage</a
+          >
         </div>
       </div>
       <div class="row pt-5">
         <div
           id="search"
-          class="col-5 align-self-start pb-5 text-center products_search"
+          class="col-md-5 align-self-start pb-5 text-center products_search"
         >
           <form onsubmit="searchProduct(); return false;">
             <label for="searchInput" class="form-label"
@@ -58,30 +62,26 @@
               Compare
             </button>
           </form>
-          <h6 class="mt-3">Code: ###-## (eg: 011-01)</h6>
+          <h6 class="mt-3">Code: ###-## (eg: 001-03, 011-05, 101-02)</h6>
           <div id="searchMessage"></div>
           <div id="searchOutput" class="mt-4"></div>
           <div id="compareHeader" class="mt-4"></div>
           <div id="compareOutput" class="mt-2"></div>
         </div>
-        <div class="col-2"></div>
-        <div class="col-5 products_col align-self-start">
+        <div class="col-md-2"></div>
+        <div class="col-md-5 products_col align-self-start">
           <h2 class="py-5 text-center">All Product Information</h2>
           <div id="outputXML"></div>
         </div>
       </div>
     </div>
+    <!--Bootstrap stylesheet and scripts-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
