fixed index page to align cards properly on smaller viewports - 16/10/2025

--- a/Part A/index.html
+++ b/Part A/index.html
@@ -24,27 +24,31 @@
           Web Application Development CA 1
         </h1>
         <h2 class="mb-5 text-center">Lorenzo Moares Nunez - 23378441</h2>
-        <div class="d-flex gap-4">
-          <div class="card index_card">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title text-center">Section 1 - XML</h5>
-              <p class="card-text">
-                Query application to search products from XML.
-              </p>
-              <a href="section1.html" class="btn btn-primary mt-auto"
-                >Section 1 - XML</a
-              >
+        <div class="row justify-content-center">
+          <div class="col-md-6 mb-4 d-flex justify-content-center">
+            <div class="card index_card">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title text-center">Section 1 - XML</h5>
+                <p class="card-text">
+                  Query application to search products from XML.
+                </p>
+                <a href="section1.html" class="btn btn-primary mt-auto"
+                  >Section 1 - XML</a
+                >
+              </div>
             </div>
           </div>
-          <div class="card index_card">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title text-center">Section 2 - JSON</h5>
-              <p class="card-text">
-                Weather application to fetch city weather from JSON.
-              </p>
-              <a href="section2.html" class="btn btn-primary mt-auto"
-                >Section 2 - JSON</a
-              >
+          <div class="col-md-6 mb-4 d-flex justify-content-center">
+            <div class="card index_card">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title text-center">Section 2 - JSON</h5>
+                <p class="card-text">
+                  Weather application to fetch city weather from JSON.
+                </p>
+                <a href="section2.html" class="btn btn-primary mt-auto"
+                  >Section 2 - JSON</a
+                >
+              </div>
             </div>
           </div>
         </div>
