added section 2 navigation, product card border display, section 1 input field now restricted to 6 digits and more narrow input field - 17/10/2025

--- a/Part A/section2.html
+++ b/Part A/section2.html
@@ -17,6 +17,21 @@
     />
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center index_body">
+          <h1>Section 2 - JSON</h1>
+          <h2>Lorenzo Moares Nunez - 23378441</h2>
+          <a href="index.html" class="btn btn-primary mt-auto"
+            >Return to HomePage</a
+          >
+          <a href="section1.html" class="btn btn-primary mt-auto"
+            >Section 1 - XML</a
+          >
+        </div>
+      </div>
+    </div>
+
     <div
       class="container d-flex flex-column justify-content-center align-items-center vh-100"
     ></div>
