--- a/Part A/section1.html
+++ b/Part A/section1.html
@@ -25,6 +25,9 @@
           <a href="index.html" class="btn btn-primary mt-auto"
             >Return to HomePage</a
           >
+          <a href="section2.html" class="btn btn-primary mt-auto"
+            >Section 2 - JSON</a
+          >
         </div>
       </div>
       <div class="row pt-5">
@@ -36,7 +39,14 @@
             <label for="searchInput" class="form-label"
               ><h2 class="pt-5">Search by Code</h2></label
             >
-            <input type="text" id="searchInput" class="form-control" />
+            <div class="d-flex justify-content-center">
+              <input
+                type="text"
+                id="searchInput"
+                class="form-control w-50"
+                maxlength="6"
+              />
+            </div>
             <button
               type="button"
               onclick="searchProduct()"
@@ -62,7 +72,7 @@
               Compare
             </button>
           </form>
-          <h6 class="mt-3">Code: ###-## (eg: 001-03, 011-05, 101-02)</h6>
+          <h6 class="mt-3">Code: ###-## (eg: 011-5)</h6>
           <div id="searchMessage"></div>
           <div id="searchOutput" class="mt-4"></div>
           <div id="compareHeader" class="mt-4"></div>
