fixed navigation buttons to prevent overlap on narrow viewports - 17/10/2025

--- a/Part A/section2.html
+++ b/Part A/section2.html
@@ -22,10 +22,10 @@
         <div class="col-12 text-center index_body">
           <h1>Section 2 - JSON</h1>
           <h2>Lorenzo Moares Nunez - 23378441</h2>
-          <a href="index.html" class="btn btn-primary mt-auto"
+          <a href="index.html" class="btn btn-primary mt-3"
             >Return to HomePage</a
           >
-          <a href="section1.html" class="btn btn-primary mt-auto"
+          <a href="section1.html" class="btn btn-primary mt-3"
             >Section 1 - XML</a
           >
         </div>
