--- a/Part A/section1.html
+++ b/Part A/section1.html
@@ -22,10 +22,10 @@
         <div class="col-12 text-center index_body">
           <h1>Section 1 - XML</h1>
           <h2>Lorenzo Moares Nunez - 23378441</h2>
-          <a href="index.html" class="btn btn-primary mt-auto"
+          <a href="index.html" class="btn btn-primary mt-3"
             >Return to HomePage</a
           >
-          <a href="section2.html" class="btn btn-primary mt-auto"
+          <a href="section2.html" class="btn btn-primary mt-3"
             >Section 2 - JSON</a
           >
         </div>
