section 1 input placeholder - 17/10/2025

--- a/Part A/section1.html
+++ b/Part A/section1.html
@@ -45,6 +45,7 @@
                 id="searchInput"
                 class="form-control w-50"
                 maxlength="6"
+                placeholder="###-##"
               />
             </div>
             <button
@@ -72,7 +73,7 @@
               Compare
             </button>
           </form>
-          <h6 class="mt-3">Code: ###-## (eg: 011-5)</h6>
+          <h6 class="mt-3">(Code ex: 011-5)</h6>
           <div id="searchMessage"></div>
           <div id="searchOutput" class="mt-4"></div>
           <div id="compareHeader" class="mt-4"></div>
