--- a/Part A/section1.html
+++ b/Part A/section1.html
@@ -39,20 +39,19 @@
             <label for="searchInput" class="form-label"
               ><h2 class="pt-5">Search by Code</h2></label
             >
-            <div class="d-flex justify-content-center">
-              <input
-                type="text"
-                id="searchInput"
-                class="form-control w-50"
-                maxlength="6"
-                placeholder="###-##"
-              />
-            </div>
+            <input
+              type="text"
+              id="searchInput"
+              class="form-control mx-auto fs-4"
+              maxlength="6"
+              placeholder="###-##"
+            />
+
             <button
               type="button"
               onclick="searchProduct()"
               id="searchBtn"
-              class="btn btn-primary mt-3"
+              class="btn btn-primary my-3 mx-auto"
             >
               Search
             </button>
@@ -60,28 +59,28 @@
               type="button"
               onclick="resetProducts()"
               id="resetBtn"
-              class="btn btn-primary mt-3"
+              class="btn btn-primary my-3 mx-auto"
             >
               Reset
             </button>
-            <button
-              type="button"
-              onclick="compareProducts()"
-              id="compareBtn"
-              class="btn btn-primary mt-3"
-            >
-              Compare
-            </button>
           </form>
-          <h6 class="mt-3">(Code ex: 011-5)</h6>
+          <h6 class="mt-3">(Code e.g. 011-05)</h6>
           <div id="searchMessage"></div>
           <div id="searchOutput" class="mt-4"></div>
+          <button
+            type="button"
+            onclick="compareProducts()"
+            id="compareBtn"
+            class="btn btn-primary mt-3 d-none"
+          >
+            Compare
+          </button>
           <div id="compareHeader" class="mt-4"></div>
           <div id="compareOutput" class="mt-2"></div>
         </div>
         <div class="col-md-2"></div>
         <div class="col-md-5 products_col align-self-start">
-          <h2 class="py-5 text-center">All Product Information</h2>
+          <h2 class="py-5 text-center">All Product Details</h2>
           <div id="outputXML"></div>
         </div>
       </div>
