changed css styling on section 1 to fit with rest of site, section1 script name change, section 1 visual changes - 18/10/2025

--- a/Part A/index.html
+++ b/Part A/index.html
@@ -19,7 +19,7 @@
     <div
       class="container d-flex flex-column justify-content-center align-items-center vh-100"
     >
-      <div class="index_body">
+      <div class="page_body">
         <h1 class="mt-auto px-auto text-center">
           Web Application Development CA 1
         </h1>
