--- a/Part A/section1.html
+++ b/Part A/section1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/scriptxml.js" defer></script>
+    <script src="js/section1script.js" defer></script>
     <meta name="author" content="Lorenzo Moares Nunez" />
     <meta name="description" content="Web Application Development CA 1" />
     <!--Google fonts-->
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-12 text-center index_body">
+        <div class="col-12 text-center page_body">
           <h1>Section 1 - XML</h1>
           <h2>Lorenzo Moares Nunez - 23378441</h2>
           <a href="index.html" class="btn btn-primary mt-3"
@@ -33,25 +33,25 @@
       <div class="row pt-5">
         <div
           id="search"
-          class="col-md-5 align-self-start pb-5 text-center products_search"
+          class="col-md-5 align-self-start pb-5 text-center page_body"
         >
           <form onsubmit="searchProduct(); return false;">
             <label for="searchInput" class="form-label"
-              ><h2 class="pt-5">Search by Code</h2></label
+              ><h2>Search by Code</h2>
+              <h6 class="mt-3">(Code e.g. 011-05)</h6></label
             >
             <input
               type="text"
               id="searchInput"
-              class="form-control mx-auto fs-4"
+              class="form-control fs-4"
               maxlength="6"
               placeholder="###-##"
             />
-
             <button
               type="button"
               onclick="searchProduct()"
               id="searchBtn"
-              class="btn btn-primary my-3 mx-auto"
+              class="btn btn-primary my-2"
             >
               Search
             </button>
@@ -59,12 +59,12 @@
               type="button"
               onclick="resetProducts()"
               id="resetBtn"
-              class="btn btn-primary my-3 mx-auto"
+              class="btn btn-primary my-2"
             >
               Reset
             </button>
           </form>
-          <h6 class="mt-3">(Code e.g. 011-05)</h6>
+
           <div id="searchMessage"></div>
           <div id="searchOutput" class="mt-4"></div>
           <button
@@ -79,8 +79,8 @@
           <div id="compareOutput" class="mt-2"></div>
         </div>
         <div class="col-md-2"></div>
-        <div class="col-md-5 products_col align-self-start">
-          <h2 class="py-5 text-center">All Product Details</h2>
+        <div class="col-md-5 page_body align-self-start">
+          <h2 class="text-center">All Product Details</h2>
           <div id="outputXML"></div>
         </div>
       </div>
