--- a/Part A/section2.html
+++ b/Part A/section2.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-12 text-center index_body">
+        <div class="col-12 text-center page_body">
           <h1>Section 2 - JSON</h1>
           <h2>Lorenzo Moares Nunez - 23378441</h2>
           <a href="index.html" class="btn btn-primary mt-3"
@@ -29,6 +29,13 @@
             >Section 1 - XML</a
           >
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 d-flex justify-content-center page_body">
+          <h1>Search by City</h1>
+        </div>
+        <div class="col-md-3"></div>
       </div>
     </div>
 
