--- a/Part A/section1.html
+++ b/Part A/section1.html
@@ -49,7 +49,6 @@
                 class="form-control fs-4 mx-2 my-2"
                 maxlength="6"
                 placeholder="###-##"
-                style="max-width: 180px"
               />
               <button
                 type="button"
@@ -79,7 +78,10 @@
           >
             Compare
           </button>
-          <div id="compareHeader" class="mt-4"></div>
+          <div id="compareHeader" class="mt-4 d-none">
+            <hr />
+            <h3>Compared Products</h3>
+          </div>
           <div id="compareOutput" class="mt-2"></div>
         </div>
         <div class="col-md-2"></div>
